--- a/stylesheets/icons.less
+++ b/stylesheets/icons.less
@@ -1,6 +1,6 @@
 // Octicon icons, from: https://github.com/github/octicons
 
-.octicons { font-family: "Octicons Regular"; font-size: medium; }
+.octicons { font-family: "Octicons Regular"; font-size: medium; text-align: center; }
 
 
 .checklist-icon { .octicons; content: "\f076"; }
@@ -11,19 +11,19 @@
 .gear-icon      { .octicons; content: "\f02f"; }
 .git-icon       { .octicons; content: "\f00a"; }
 .package-icon   { .octicons; content: "\f0c4"; }
-.ruby-icon      { .octicons; content: "\f047"; left: -1px; }
+.ruby-icon      { .octicons; content: "\f047"; }
 .secret-icon    { .octicons; content: "\f08c"; }
 .terminal-icon  { .octicons; content: "\f0c8"; }
 .xml-icon       { .octicons; content: "\f010"; }
-.markdown-icon  { .octicons; content: "\f0c9"; left: -1px; }
+.markdown-icon  { .octicons; content: "\f0c9"; }
 
-.elixir-icon  { .octicons; content: '\f010'; left: 1px; }
-.erlang-icon  { .octicons; content: '\f010'; left: 1px; }
+.elixir-icon  { .octicons; content: '\f010'; }
+.erlang-icon  { .octicons; content: '\f010'; }
 
 // FontAwesome icons, looks better on small font-size,
 // from: http://fortawesome.github.io/Font-Awesome/cheatsheet/
 
-.fa { font-family: "FontAwesome"; font-size: small; }
+.fa { font-family: "FontAwesome"; font-size: small; text-align: center; }
 
 .coffee-icon { .fa; content: "\f0f4"; }
 .css3-icon   { .fa; content: "\f13c"; }
@@ -32,26 +32,26 @@
 // Mfizz icons, look better on small font-size,
 // from: http://mfizz.com/oss/font-mfizz
 
-.mf { font-family: "FontMfizz"; font-size: small; }
+.mf { font-family: "FontMfizz"; font-size: small; text-align: center;  }
 
-.js-icon      { .mf; content: "\f148"; left: 1px; }
-.python-icon  { .mf; content: "\f109"; left: 1px; }
-.c-icon       { .mf; content: "\f10e"; left: 1px; }
-.cpp-icon     { .mf; content: "\f101"; left: 1px; }
-.objc-icon    { .mf; content: "\f105"; left: 1px; font-size: medium; }
-.csharp-icon  { .mf; content: "\f134"; left: 1px; }
-.perl-icon    { .mf; content: "\f117"; left: 1px; }
-.php-icon     { .mf; content: "\f14a"; left: 0px; font-size: medium; }
-.java-icon    { .mf; content: "\f142"; left: 1px; font-size: medium; }
-.scala-icon   { .mf; content: "\f115"; left: 1px; font-size: medium; }
-.haskell-icon { .mf; content: "\f130"; left: 1px; }
+.js-icon      { .mf; content: "\f148"; }
+.python-icon  { .mf; content: "\f109"; }
+.c-icon       { .mf; content: "\f10e"; }
+.cpp-icon     { .mf; content: "\f101"; }
+.objc-icon    { .mf; content: "\f105"; font-size: medium; }
+.csharp-icon  { .mf; content: "\f134"; }
+.perl-icon    { .mf; content: "\f117"; }
+.php-icon     { .mf; content: "\f14a"; font-size: medium; }
+.java-icon    { .mf; content: "\f142"; font-size: medium; }
+.scala-icon   { .mf; content: "\f115"; font-size: medium; }
+.haskell-icon { .mf; content: "\f130"; }
 
 // Icomoon icons, from http://icomoon.io
 
-.icomoon { font-family: "icomoon"; font-size: large; left: -2px; }
+.icomoon { font-family: "icomoon"; font-size: 18px; text-align: center; top: 3px; }
 
-.grunt-icon         { .icomoon; content: "\e611"; top: 3px; }
-.gulp-icon          { .icomoon; content: "\e610"; top: 2px; }
-.hbs-mustache-icon  { .icomoon; content: "\e60f"; top: 3px; }
-.npm-icon           { .icomoon; content: "\e616"; top: 4px; }
-.sass-icon          { .icomoon; content: "\e603"; top: 3px; }
+.grunt-icon         { .icomoon; content: "\e611"; }
+.gulp-icon          { .icomoon; content: "\e610"; }
+.hbs-mustache-icon  { .icomoon; content: "\e60f"; }
+.npm-icon           { .icomoon; content: "\e616"; }
+.sass-icon          { .icomoon; content: "\e603"; }
