--- a/stylesheets/items.less
+++ b/stylesheets/items.less
@@ -3,4 +3,5 @@
 
 @{pane-tab-selector}:before {
   margin-right: 5px;
+  vertical-align: middle;
 }
